--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,8 @@
 machine:
   services:
     - docker
+  environment:
+    PROJECT_NAME: endpoint_svc
 dependencies:
   cache_directories:
     - ~/flatbuffers
@@ -13,11 +15,7 @@ deployment:
     branch: master
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - ./build.sh
-      - ./push.sh
-      - ./build.sh:
-          pwd:
-            db
-      - ./push.sh:
+      - make publish
+      - make publish:
           pwd:
             db
